# medscope

./: .gitignore  Dockerfile  docker-compose.yml
medscope_backend/: pyproject.toml
